--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -20,7 +20,7 @@
             }
             
             .header {
-		 padding: 0;   
+		 padding: 0 !important;   
 	    }
             
             #title {
