Header paragraph text changed

--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -109,7 +109,7 @@
                  
                   <h1 class="card-text"><b>"British Schindler"</b></h1>
                <p class="card-text"> &dagger; 19.05.1909 - 01.07.2015 &dagger; </p>
-            <p class="card-text">Rescuer of 669 Children From Holocaust</p>
+            <p class="card-text">Rescuer Of 669 Children From Holocaust</p>
             
           </div>
       </div>
